fixed bug by wrapping <Link> component with <div>

--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -1,5 +1,16 @@
+.features {
+    display: flex;
+    align-items: center;
+}
+
 .topicGrid {
-    /* Inline css used */
+    /*border: 1px solid green;*/
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 40px;
+    padding: 80px 0;
+    align-items: stretch;
 }
 
 @media only screen and (max-width: 1200px) {
